placeholder build step

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,11 +5,15 @@ on:
     branches: [ master ]
     
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
+    - name: Compile to 'dist/'
+      run: cp -r src/ dist/
+
     - name: Checkout Repo
       uses: actions/checkout@master
+
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
@@ -19,4 +23,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: 'src'
+        SOURCE_DIR: 'dist'
