--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Compile to 'dist/'
-      run: cp -r src dist
+      run: |
+        pwd
+        ls
+        #cp -r src dist
 
     - name: Checkout Repo
       uses: actions/checkout@master
